# pak-public-figure-classifier

./: .dvcignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  dvc.yaml  params.yaml  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml
airflow/dags/: face_classifier_dag.py
data/metadata/: collection_checkpoint.json  collection_report.json  validation_report.json
frontend/: app.py
results/: efficientnet_b3_classification_report.txt  efficientnet_b3_history.json  efficientnet_b3_metrics.json  efficientnet_b3_misclassified.csv  efficientnet_b3_summary.json  ensemble_3way_classification_report.txt  ensemble_3way_metrics.json  ensemble_effnet_facenet_classification_report.txt  ensemble_effnet_facenet_metrics.json  ensemble_resnet_effnet_classification_report.txt  ensemble_resnet_effnet_metrics.json  ensemble_weighted_classification_report.txt  ensemble_weighted_metrics.json  facenet_summary.json  facenet_vggface2_classification_report.txt  facenet_vggface2_history.json  facenet_vggface2_metrics.json  model_comparison.csv  resnet50_classification_report.txt  resnet50_history.json  resnet50_metrics.json  resnet50_misclassified.csv  resnet50_summary.json  training_run.json
scripts/: deploy_ec2.sh  distribute_commits.sh  finalize_dataset.sh  git_setup.sh  manual_review.py  run_data_collection.py  run_evaluation.py  run_split.py  run_training.py  run_validation.py
src/: __init__.py  config.py
tests/: conftest.py  test_api.py  test_augmentation.py  test_models.py  test_scrapers.py  test_validation.py
(+37 files in other folders)
